--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,50 @@
+/* Feuille de style de contact.html */
+
+/* Importation d'une font */
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Lobster&family=Roboto+Condensed:wght@300&display=swap');
+
+/* Reset du BODY */
+
+body {
+    margin: 0px;
+    padding: 0px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+/* Gestion du HEADER */
+h1, .menu-nav {
+    position: relative;
+    text-align: center;
+    left: 5%; 
+}
+
+
+/* Gestion de la balise contenant en haut SVP */
+
+#up a {
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    background-color: #58ACFA;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 10px;
+    text-transform: uppercase;
+}
+
+#up a:hover {
+    background-color: #fff;
+    color: #58ACFA;
+    border: 1px solid #58ACFA;
+    text-decoration: underline;
+}
+
+
 h1 {
     border-style: groove;
-
+    font-family: 'Gloria Hallelujah', cursive;
+    width: 80%;
 }
 
 h2 {
@@ -8,23 +52,257 @@ h2 {
     color: red;
 }
 
-body ul{
-    margin: 0px;
-    padding: 0px;
 
+
+* {
+    text-decoration: none;
 }
 
-ul {
+
+.fin {
+    position: relative;
+    margin-top: 55px;
+    padding: 0px;
+    left: 2%;
+    text-decoration: underline;
+    text-indent: 9.5em;
+}
+
+p{
+    position: relative;
+    width: 80%;
+    left: 4%;
+    padding-left: 10px;
+    font-size: large;
+    text-indent: 12em;
+}
+
+#kids {
+    position: relative;
+    text-decoration: underline;
+    text-indent: 9.5em;
+    left: 2%;
+}
+
+
+/* Gestion du menu de navigation */
+
+nav.menu-nav ul li.btn {
+    display: inline-block;
+} 
+
+nav.menu-nav ul li.btn {
+    list-style-type: none;
+}
+
+nav.menu-nav ul li.btn a {
+    color: #ffffff;
+    background-color: #FA3D21;
+    text-decoration: none;
+    padding: 10px;
+}
+
+
+nav.menu-nav ul li.btn:hover a {
+    color: #FA3D21;
+    background-color: #43D0FA;
+    text-decoration: underline;
+    transition: 0.3s all;
+    border-radius: 20px;
+}
+
+
+/*###################################################*/
+/*              Gestion des pseudos éléments         */
+/*###################################################*/
+
+/* Gestion du pseudo élément de l'accueil */
+#acc::before {
+    content: url("img/LOGO KIDS20-FINAL.gif");
+    vertical-align: middle;
+    display: inline-block;
+}
+
+/* Gestion du pseudo élément de l'actualité */
+#act::before {
+    content: url(img/icon_news.png);
+    vertical-align: middle;
+    display: inline-block;
+}
+
+/* Gestion du pseudo élément du contact */
+#con::before {
+    content: url("img/icon_contact.jpg");
+    vertical-align: middle;
+    display: inline-block;
+}
+
+/* Gestion du pseudo élément de la dédicace */
+#de::before {
+    content: url("img/icon_dédicace.jpg");
+    vertical-align: middle;
+    display: inline-block;
+}
+
+
+/* Gestion de la SECTION contenant le formulaire méthode 1*/
+.form {
+    border: 2px solid #ccc;
+    padding: 10px;
+    margin-left: 440px;
+    border-radius: 10px;
+    background: url("img/ciel.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #CEECF5;
+    background-image: transparent;
+    width: 50%;
+    margin-bottom: 20px; /* pour mettre un écart avec l'élément suisvant */
+    
+}
+
+h4 {
+    text-decoration: underline;
+}
+
+.form input[type=text], .form input[type=password], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; /* Pour permettre à notre élément de tenir dans son conteneur */
+}
+
+.form label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+.form select {
+    width: 50%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    box-sizing: border-box;
+}
+
+textarea {
+    width: 100%;
+    background-color: #58ACFA;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea:hover {
+    width: 100%;
+    background-color: #fff;
+    color: #58ACFA;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+/* Spécialement utilisé dans le formulaire de la méthode 3 */
+fieldset {
+    margin: 10px;
+    padding: 5px;
+    border: 2px inset #2E64FE;
+    border-radius: 10px;
+}
+
+.form #cont {
+    background-color: #ccc;
+    min-height: 400px;
+    padding-bottom: 20px;
+}
+
+.form input[type=submit], .form input[type=reset] {
+    background-color: #58ACFA;
+    color: #fff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+} 
+
+.form input[type=submit]:hover, .form input[type=reset]:hover {
+    background-color: #fff;
+    color: #58ACFA;
+}
+
+/* Gestion du formulaire méthode 2 */
+.container {
+    max-width: 380px;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 20px; /* Pour mettre de l'espace entre deux éléments */
+    background-color: rgba(0, 0, 0, .8);
+    text-align: center;
+    border-radius: 20px;
+    padding: 40px;
+    color: #fff;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#forml {
+    color: #fff;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: bold;
+}
+
+.i {
+    width: 100%;
+    margin: 10px 0;
+    outline: none;
+    background-color: transparent;
+    color: #fff;
+    padding: 10px 6px;
+    font-size: 18px;
+    font-weight: bold;
+    box-sizing: border-box; /*Pour adapter notre comptenu */
+    border: none;
+    border-bottom: 1px solid #fff;
+}
+
+button {
+    width: 80%;
+    border-radius: 12px;
+    padding: 10px;
+    background-color: rgb(90, 120, 190);
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    margin: 30px 10px 0px 10px;
+}
+
+/* Gestion du pied de page */
+
+footer .bye{
+	position: relative;
+    width: 70%;
+    left: 20%;
+    top: 2vh;
+    background-color: aqua;
+    border-bottom: 2px double red; 
+    border-radius: 10px;
+  
+}
+
+.bye {
     position: absolute; /*Pour le centrer */
     top: 50%;
     left: 30%;
     transform: translate(-5%, -5%);
     margin: 0px; /*on l'enlève le margin*/
-    padding: 0px;
+    padding: 0 0 150px;
     display: flex;
 }
 
-ul li {
+.bye li {
     list-style: none;
     color: black;
     font-family: Arial;
@@ -102,44 +380,13 @@ ul li:nth-child(17) {
     animation-delay: 1.7s;
 }
 
-* {
-    text-decoration: none;
-}
-
-header div {
-    word-spacing: 200px;
-    padding: 20px;
-
-}
-
-.fin {
-    position: relative;
-    margin-top: 55px;
-    padding: 0px;
-    left: 2%;
-    text-decoration: underline;
-}
-footer p{
-    padding-left: 10px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: large;
-}
-
-p {
-    position: relative;
-    width: 80%;
-    left: 4%;
-    padding-left: 10px;
-}
-
-#kids {
-    position: relative;
-    text-decoration: underline;
-    left: 2%;
-}
-
-#connexion {
-    position: relative;
-    text-decoration: underline;
-    text-indent:1.5em;
+footer p {
+	position: relative;
+    width: 60%;
+    left: 20%;
+    background-color: blanchedalmond;
+    border-radius:  5px;
+    /*border: 1px solid blue;*/
+    top: 2vh;
+	text-align: center;
 }
