--- a/clignottement.css
+++ b/clignottement.css
@@ -13,46 +13,21 @@ body {
 
 }
 
-/* Gestion du HEADER */
-h1, .menu-nav {
-    position: relative;
-    width: 80%;
-    text-align: center;
-    left: 5%; 
+
+
+.center {
+	text-align: center;
 }
-
-
-/* Gestion de la balise contenant en haut SVP */
-
-#up a {
-    position: fixed;
-    top: 10px;
-    right: 20px;
-    background-color: #58ACFA;
-    color: #fff;
-    font-weight: bold;
-    border-radius: 10px;
-    padding: 10px;
-    text-transform: uppercase;
-}
-
-#up a:hover {
-    background-color: #fff;
-    color: #58ACFA;
-    border: 1px solid #58ACFA;
-    text-decoration: underline;
-}
-
 
 .change {
-	position: absolute;
+	position: relative;
 	display: flex; /*pour aligner les letres de manière horizontale */
 }
 
 .change li{
 	list-style: none; /*pour retirer les points qu'il y avait */
 	font-size: 40px; /*pour augmenter la taille de notre chaîne de caractère*/
-	letter-spacing: 10px; /*pour augmenter l'espace entre les lettres*/
+	/*letter-spacing: 2px; /*pour augmenter l'espace entre les lettres*/
 	animation:flash 1.5s infinite;
 }
 
@@ -111,7 +86,7 @@ ul li:nth-child(13){
 
 
 
-h2 {
+/*h2 {
 	color: blue;
 	text-align: center;
 	font-weight: bolder;
@@ -119,14 +94,6 @@ h2 {
 	max-height: 2.5em;
 	background-color: cyan;
 	border-radius: 15px;
-}
-
-h1 {
-	line-height: 2.5em;
-	border-style: inset;
-	padding: 20px;
-	max-height: 2.95em;
-	font-family: 'Gloria Hallelujah', cursive;
 }
 
 p.présentation a{
@@ -144,87 +111,105 @@ p.présentation a{
 }
 
 
-/* Gestion du menu de navigation */
-
-nav.menu-nav ul li.btn {
-    display: inline-block;
-} 
-
-nav.menu-nav ul li.btn {
-    list-style-type: none;
-}
-
-nav.menu-nav ul li.btn a {
-    color: #ffffff;
-    background-color: #FA3D21;
-    text-decoration: none;
-    padding: 10px;
-}
-
-
-nav.menu-nav ul li.btn:hover a {
-    color: #FA3D21;
-    background-color: #43D0FA;
-    text-decoration: underline;
-    transition: 0.3s all;
-    border-radius: 20px;
-
-}
-
-
-/*###################################################*/
-/*              Gestion des pseudos éléments         */
-/*###################################################*/
-
-/* Gestion du pseudo élément de l'accueil */
-#acc::before {
-    content: url("img/LOGO KIDS20-FINAL.gif");
-    vertical-align: middle;
-    display: inline-block;
-}
-
-/* Gestion du pseudo élément de l'actualité */
-#act::before {
-    content: url(img/icon_news.png);
-    vertical-align: middle;
-    display: inline-block;
-}
-
-/* Gestion du pseudo élément du contact */
-#con::before {
-    content: url("img/icon_contact.jpg");
-    vertical-align: middle;
-    display: inline-block;
-}
-
-/* Gestion du pseudo élément de la dédicace */
-#de::before {
-    content: url("img/icon_dédicace.jpg");
-    vertical-align: middle;
-    display: inline-block;
-}
-
 
 /* Gestion du pied de page */
-footer .change{
+aside .change{
 	position: relative;
-    width: 60%;
-    left: 10%;
-	padding: 160px;
-    border: 1px solid blue;
+	max-width: 900px;
+    width: 85%;
+	padding: 200px;
+    border: 3px solid blue;
 	background-color: beige;
     top: 2vh;
-	text-indent: 3em;
-	
+	display: flex;
+    justify-content: space-between;
+    align-items: center;
+	margin: 0 auto;
 }
 
-footer p {
-	position: relative;
-    width: 80%;
-    left: 10%;
-    background-color: blanchedalmond;
-    border-radius:  5px;
-    /*border: 1px solid blue;*/
-    top: 2vh;
-	text-align: center;
+
+
+/*******************************************/
+/* Section de gestion des medias queries */
+/*****************************************/
+/* Règles CSS pour les écrans inférieurs à 576px */
+@media (max-width: 576px) {
+    #myListe{
+        display: none;
+    }
+
+    header nav label{
+        display: block;
+        box-sizing: border-box;
+    }
+    header nav label:hover{
+        cursor: pointer;
+    }
+    /* Si myBurger coché: on active le mode FLEX */
+    #myBurger[type=checkbox]:checked ~ #myListe{
+        display: block;
+        /*background-color: red;*/
+        width: 100%;
+        height: 17vh;
+        margin: 0 1em 1em 0;
+        position: relative;
+        /*left: 60vw;*/
+        top: 26vh;
+    }
+}
+
+/* Règles CSS pour les écrans inférieurs à 768px */
+@media (max-width: 768px) {
+
+}
+
+/* Règles CSS pour les écrans inférieurs à 992px */
+@media (max-width: 992px){
+
+    #myListe{
+        display: none;
+    }
+
+    header nav label{
+        display: block;
+        box-sizing: border-box;
+    }
+    header nav label:hover{
+        cursor: pointer;
+    }
+    /* Si myBurger coché: on active le mode FLEX */
+    #myBurger[type=checkbox]:checked ~ #myListe{
+        display: block;
+        /*background-color: cadetblue;*/
+        width: 85%;
+        height: 17vh;
+        margin: 0 1em 1em 0;
+        position: relative;
+        /*left: 60vw;*/
+        top: 6vh;
+    }
+
+    /* Si myBurger coché: Les items du menu principal */
+    /* sont centrés en mode FLEX */
+    /*#myListe li{
+        flex-direction: column;
+        text-align: center;
+        /*margin: 1.6em 0 1.2em 0;*/
+        /*border-bottom: 1px solid whitesmoke;*/
+    }
+    /*#myListe li a{
+        width: 10em;
+        margin: 0 0 1em 0;
+    }
+    #myListe li a:hover{
+        cursor: pointer;
+        background-color: whitesmoke;
+        color: cadetblue;
+    }*/
+
+}
+
+/* Règles CSS pour les écrans inférieurs à 1200px */
+@media (max-width: 1200px) {
+
 }
