--- a/style.css
+++ b/style.css
@@ -1,19 +1,9 @@
-/* Feuille de style de l'accueil ou encore index.html */
+/* Feuille de style de index.html et dedicace.html */
 
-/* Importation d'une font */
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Lobster&family=Roboto+Condensed:wght@300&display=swap');
-
-
-/* Reset du BODY */
-body {
-    /*padding: 15px;*/ 
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    background-color: whitesmoke;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.img-logo {
+  position: relative;
+  text-align: center;
 }
-
 
 div#content{
     background-color: grey;
@@ -55,87 +45,7 @@ div.annonce img{
 }
 
 
-/* Gestion de la balise contenant en haut SVP */
 
-#up a {
-    position: fixed;
-    top: 10px;
-    right: 20px;
-    background-color: #58ACFA;
-    color: #fff;
-    font-weight: bold;
-    border-radius: 10px;
-    padding: 10px;
-    text-transform: uppercase;
-}
-
-#up a:hover {
-    background-color: #fff;
-    color: #58ACFA;
-    border: 1px solid #58ACFA;
-    text-decoration: underline;
-}
-
-
-/* Gestion du menu de navigation */
-
-nav.menu-nav ul li.btn {
-    display: inline-block;
-} 
-
-nav.menu-nav ul li.btn {
-    list-style-type: none;
-}
-
-nav.menu-nav ul li.btn a {
-    color: #ffffff;
-    background-color: #FA3D21;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-
-nav.menu-nav ul li.btn:hover a {
-    color: #FA3D21;
-    background-color: #43D0FA;
-    text-decoration: underline;
-    transition: 0.3s all;
-    border-radius: 20px;
-}
-
-
-/*###################################################*/
-/*              Gestion des pseudos éléments         */
-/*###################################################*/
-
-/* Gestion du pseudo élément de l'accueil */
-#acc::before {
-    content: url("img/LOGO KIDS20-FINAL.gif");
-    vertical-align: middle;
-    display: inline-block;
-}
-
-/* Gestion du pseudo élément de l'actualité */
-#act::before {
-    content: url(img/icon_news.png);
-    vertical-align: middle;
-    display: inline-block;
-}
-
-/* Gestion du pseudo élément du contact */
-#con::before {
-    content: url("img/icon_contact.jpg");
-    vertical-align: middle;
-    display: inline-block;
-}
-
-/* Gestion du pseudo élément de la dédicace */
-#de::before {
-    content: url("img/icon_dédicace.jpg");
-    vertical-align: middle;
-    display: inline-block;
-}
 
  h1.welcome {
     text-align: center;
@@ -143,7 +53,7 @@ nav.menu-nav ul li.btn:hover a {
     font-size: 40px;
     animation:flash 1.5s infinite;
     font-family: 'Gloria Hallelujah', cursive;
-} 
+}
 
 @keyframes flash {
     50%{
@@ -264,12 +174,12 @@ h1 {
 
 
 /* Gestion du HEADER */
-header {
+/*header {
     position: relative;
-    width: 80%;
+    width: 100%;
     text-align: center;
-    left: 10%;  
-    overflow: auto;
+    /*left: 10%;
+    overflow: auto;*/
 }
 
 
@@ -394,13 +304,6 @@ p {
     100%{background-position: -2880px 0px;}
 } */
 
-.fa {
-    position: relative;
-    font-family: 'Gloria Hallelujah', cursive;
-    width: 80%;
-    text-align: center; 
-}
-
 h3 {
     text-indent: 2.5em;
     list-style: none;
@@ -435,49 +338,17 @@ p a{
 }
 
 
+/* Gestion des images */
+.img-annonce {
+  width: 15%;
+}
+
+.img-rightbox {
+  width: 45%;
+}
+
+
 /* Gestion de la SECTION contenant la classe RIGHT et LEFT de dedicace.html*/
-.right {
-    margin-bottom: 20px;
-    padding: 10px;
-    margin-left: 20%;
-    float: right;
-    margin: 10px;
-}
-
-.droite p {
-    font-size: 1.2em;
-    font-weight: bolder;
-    text-align: center;
-    color: black;
-    width: 80%;
-    left: 10%;
-    margin: 45px;
-}
-
-
-.gauche p {
-    font-size: 1.2em;
-    font-weight: bolder;
-    text-align: center;
-    color: black;
-    width: 80%;
-    left: 10%;
-    margin: 45px;
-}
-
-h4 {
-    width: 80%;
-    padding-left: 20px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    color: #FA3D21;
-    background-color: #58ACFA;
-    border-radius: 0 0 10px 10px;
-    text-transform: capitalize;
-    text-align: center;
-    margin: 25px;
-}
-
 .left {
     margin-bottom: 20px;
     padding: 10px;
@@ -485,9 +356,10 @@ h4 {
     float: left;
 }
 
-.clear {
+
+/*.clear {
     clear: both;
-}
+}*/
 
 aside {
     display: inline-block;
@@ -509,56 +381,100 @@ aside {
     float: left;
     margin: 15px;
     padding: 15px;
-} 
+}
 
- 
+
 
 /* Gestion de la SECTION contenant la classe POSITION */
 .position {
-    min-height: 50px;
-    border: 1px solid #aaa;
-    text-align: center;
-    padding: 22px;
     width: 50%;
-    margin-left: 440px;
-}
-
-/* Gestion de a balise H2 contenu dans le pied de page */
-#connexion {
-    position: relative;
-    text-decoration: underline;
-    text-indent:1.5em;
-}
-
-* {
-    text-decoration: none;
-}
-
-/* Gestion du div contenu dans notre pied de page */
-footer div {
-    word-spacing: 100px;
-    padding: 20px;
-
+    margin: 0 auto;
 }
 
 
-/* Gestion du pied de page */
 
-.foot {
-    position: relative;
-    width: 80%;
-    left: 10%;
-    background-color: blanchedalmond;
-    border-radius:  5px;
-    /*border: 1px solid blue;*/
-    top: 2vh;
+
+/*******************************************/
+/* Section de gestion des medias queries */
+/*****************************************/
+/* Règles CSS pour les écrans inférieurs à 576px */
+@media (max-width: 576px) {
+    #myListe{
+        display: none;
+    }
+
+    header nav label{
+        display: block;
+        box-sizing: border-box;
+    }
+    header nav label:hover{
+        cursor: pointer;
+    }
+    /* Si myBurger coché: on active le mode FLEX */
+    #myBurger[type=checkbox]:checked ~ #myListe{
+        display: block;
+        /*background-color: red;*/
+        width: 100%;
+        height: 17vh;
+        margin: 0 1em 1em 0;
+        position: relative;
+        /*left: 60vw;*/
+        top: 26vh;
+    }
 }
 
-.footer {
-    width: 80%;
-    /*border: 1px solid blue;*/
-    margin: 55px;
-    text-align: center;
-    /*background-color: blanchedalmond;*/
-    border-radius:  5px;   
+/* Règles CSS pour les écrans inférieurs à 768px */
+@media (max-width: 768px) {
+
+}
+
+/* Règles CSS pour les écrans inférieurs à 992px */
+@media (max-width: 992px){
+
+    #myListe{
+        display: none;
+    }
+
+    header nav label{
+        display: block;
+        box-sizing: border-box;
+    }
+    header nav label:hover{
+        cursor: pointer;
+    }
+    /* Si myBurger coché: on active le mode FLEX */
+    #myBurger[type=checkbox]:checked ~ #myListe{
+        display: block;
+        /*background-color: cadetblue;*/
+        width: 85%;
+        height: 17vh;
+        margin: 0 1em 1em 0;
+        position: relative;
+        /*left: 60vw;*/
+        top: 6vh;
+    }
+
+    /* Si myBurger coché: Les items du menu principal */
+    /* sont centrés en mode FLEX */
+    /*#myListe li{
+        flex-direction: column;
+        text-align: center;
+        /*margin: 1.6em 0 1.2em 0;*/
+        /*border-bottom: 1px solid whitesmoke;*/
+    }
+    /*#myListe li a{
+        width: 10em;
+        margin: 0 0 1em 0;
+    }
+    #myListe li a:hover{
+        cursor: pointer;
+        background-color: whitesmoke;
+        color: cadetblue;
+    }*/
+
+}
+
+/* Règles CSS pour les écrans inférieurs à 1200px */
+@media (max-width: 1200px) {
+
 }
